# aspect_ratio

./: CMakeLists.txt  README.md
src/: main.cpp
